<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:gravity="center_vertical"
    android:layout_marginBottom="8dp"
    android:background="@drawable/bg_list"
    android:backgroundTint="@color/second_primary"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/search_tvFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/product_sans_bold" />

        <TextView
            android:id="@+id/search_tvKkal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="400 Kkal"
            android:textSize="16sp"
            android:fontFamily="@font/product_sans_reguler"
            android:layout_marginStart="4dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gula"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/product_sans_reguler" />

            <TextView
                android:id="@+id/search_tvKalori"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="300"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/product_sans_bold"
                android:layout_marginStart="4dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/karbo"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/product_sans_reguler" />

            <TextView
                android:id="@+id/search_tvKarbo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="300"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/product_sans_bold"
                android:layout_marginStart="4dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/textview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lemak"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/product_sans_reguler" />

            <TextView
                android:id="@+id/search_tvLemak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="300"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/product_sans_bold"
                android:layout_marginStart="4dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/textview4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/product_sans_reguler" />

            <TextView
                android:id="@+id/search_tvProtein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="300"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/product_sans_bold"
                android:layout_marginStart="4dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>